--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,10 @@
 
 spring.application.name=roomreservations
 
-# Enable H2 console for debugging
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
-spring.datasource.url=jdbc:h2:mem:roomreservations;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=admin
-spring.datasource.password=admin
+# SQLite file database setup
+spring.datasource.url=jdbc:sqlite:/app/data/roomreservations.db
+spring.datasource.driverClassName=org.sqlite.JDBC
+spring.jpa.database-platform=org.hibernate.community.dialect.SQLiteDialect
 
 # Initialize schema and data automatically from schema.sql and data.sql on startup
 spring.sql.init.mode=always
