--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 spring.application.name=roomreservations
 
 # SQLite file database setup
-spring.datasource.url=jdbc:sqlite:/app/data/roomreservations.db
+spring.datasource.url=jdbc:sqlite:./data/roomreservations.db
 spring.datasource.driverClassName=org.sqlite.JDBC
 spring.jpa.database-platform=org.hibernate.community.dialect.SQLiteDialect
 
