--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,9 +1,9 @@
   name: CI/CD Pipeline
   on:
     push:
-      branches: [  master ]
+      branches: [  main ]
     pull_request:
-      branches: [ master ]
+      branches: [ main ]
   jobs:
     test:
       name: Run Unit Tests
