added hashing passwords, viewing / cancelling reservations, search room tests

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,9 +10,8 @@ spring.jpa.database-platform=org.hibernate.community.dialect.SQLiteDialect
 spring.sql.init.mode=always
 
 # JPA / Hibernate
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
 
 # Ensure data.sql populates rooms data after schema is created
 spring.jpa.defer-datasource-initialization=true
-
